--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,16 @@
 .app{
     background:rgb(37, 34, 34);
     width:100%;
-    height: 100vh;
+    height: 94vh;
     border-radius: 40px 10px;
-    color:rgb(146, 173, 16);
+    color:wheat;
+}
+
+@media (max-width: 768px)
+{
+    .app{
+        width:100%;
+        height: 98vh;
+        border-radius: 5px;
+    }
 }
