--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,12 @@
     margin:0;
     position: 0;
 }
-.app{
-    background:rgb(37, 34, 34);
+/* .app{
     width:100%;
     height: 94vh;
     border-radius: 40px 10px;
-    color:wheat;
-}
-
+} */
+/*
 @media (max-width: 768px)
 {
     .app{
@@ -17,4 +15,4 @@
         height: 98vh;
         border-radius: 5px;
     }
-}
+} */
