--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -1,4 +1,3 @@
-/* General Styles */
 nav {
     padding: 20px;
     display: flex;
@@ -10,6 +9,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 10px;
+    color: rgb(137, 137, 137);
 }
 
 .nav-logo img {
@@ -46,8 +46,9 @@ nav {
     justify-content: center;
     width: 20px;
     height: 20px;
+    cursor:pointer;
     background-color: rgb(95, 95, 95);
-    color: rgb(255, 214, 137);
+    color:rgb(255, 233, 193);
     font-size: 24px;
     padding: 10px 10px;
     text-decoration: none;
@@ -56,12 +57,53 @@ nav {
 }
 
 .navbar li a:hover {
-    color: wheat;
+    color: rgb(255, 255, 255) ;
     transform: scale(1.09);
-    background-color: black;
+    background-color: rgb(1, 181, 169);
+}
+@media (min-width:768px) and (max-width:1024px){
+    .nav-logo {
+        width: 100%;
+    }
+    .nav-logo h1{
+        font-size: 24px;
+    }
+    .hamburger-icon {
+        position: absolute;
+        top: 65%;
+        right: 20px;
+        font-size: 40px;
+        transform: translateY(-50%);
+        cursor: pointer;
+        display: block;
+        color: wheat;
+    }
+
+    .navbar {
+        position: fixed;
+        top: auto;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        flex-direction: row;
+        justify-content: space-around;
+        background-color: rgba(0, 0, 0, 0.9);
+        padding: 10px 0;
+        border-radius: 10px 10px 0 0;
+        visibility: hidden;
+        opacity: 0;
+        transform: translateY(100%);
+        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    }
+
+    .navbar.open {
+        visibility: visible;
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
-@media (max-width: 468px) {
+@media (max-width: 540px) {
     .nav-logo {
         width: 100%;
     }
