--- a/src/pages/aboutpage/Aboutpage.css
+++ b/src/pages/aboutpage/Aboutpage.css
@@ -1,30 +1,26 @@
 .about {
-    width: 100%;
-    min-height: 100vh; /* Full viewport height */
-    padding: 40px;
+    margin-top: 30px;
+    min-height: 100vh;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: 'Arial', sans-serif; /* Optional: Font customization */
   }
 
-  .about h1 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #222;
+  .about h2{
+    font-size: 2.3rem;
   }
 
   .about p {
     font-size: 1.2rem;
-    line-height: 1.6;
-    max-width: 800px; /* Limit the width for better readability */
-    color: #555;
+    line-height: 2.5;
+    max-width: 800px;
+    color: #cacaca;
   }
 
-  /* Responsive Design for About Section */
-  @media (max-width: 1024px) {
+
+  @media (min-width:768px)and (max-width: 1024px) {
+
     .about h1 {
       font-size: 2rem;
     }
@@ -35,7 +31,11 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width:540px) {
+    .about{
+        padding:0;
+
+    }
     .about h1 {
       font-size: 1.8rem;
     }
