--- a/src/pages/aboutpage/Aboutpage.css
+++ b/src/pages/aboutpage/Aboutpage.css
@@ -1,47 +1,113 @@
 .about {
     margin-top: 30px;
-    min-height: 100vh;
     padding: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
+}
 
-  .about h2{
+.about h2 {
+    text-align: center;
     font-size: 2.3rem;
-  }
+}
 
-  .about p {
-    font-size: 1.2rem;
-    line-height: 2.5;
-    max-width: 800px;
-    color: #cacaca;
-  }
+.infos {
+    display: flex;
+    padding: 20px;
+    justify-content: space-between;
+    margin: 0 auto;
+    gap: 100px;
+    max-width: 1200px;
+    flex-wrap: wrap;
+}
+.info-item {
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
 
+.personal {
+    flex: 1;
+    min-width: 300px;
+    padding: 40px;
+    color: #ffffff;
+    text-align: left;
+    margin: 10px;
+}
+.education{
+    flex:1;
+    min-width: 300px;
+    padding: 40px;
+    color: #ffffff;
+    margin:10px;
+}
+.education dl{
+    margin:0;
+    padding:0;
+}
+.education dt{
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    padding: 5px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+.education dd{
+    margin-left: 20px;
+    font-size: 1rem;
+    color: #cfcfcf;
+}
+.personal h3{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+.education h3{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
 
-  @media (min-width:768px)and (max-width: 1024px) {
-
-    .about h1 {
-      font-size: 2rem;
+/* Tablet View: 768px - 1024px */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .about h2 {
+        font-size: 2rem;
     }
 
-    .about p {
-      font-size: 1rem;
-      padding: 10px;
-    }
-  }
-
-  @media (max-width:540px) {
-    .about{
-        padding:0;
-
-    }
-    .about h1 {
-      font-size: 1.8rem;
+    .infos {
+        margin: 0 50px;
+        gap: 15px;
     }
 
-    .about p {
-      font-size: 0.9rem;
-      padding: 5px;
+    .personal, .education {
+        padding: 15px;
     }
-  }
+}
+.icons{
+    padding:20px 0px;
+}
+.icons a{
+    font-size: 1.5rem;
+    padding:0px 20px;
+    color: wheat;
+}
+
+/* Mobile View: Up to 540px */
+@media (max-width: 540px) {
+    .about {
+        padding: 0 10px;
+    }
+
+    .about h2 {
+        font-size: 1.8rem;
+    }
+
+    .infos {
+        flex-direction: column;
+        gap: 20px;
+        margin: 0;
+    }
+
+    .personal, .education {
+        min-width: 100%;
+        padding: 10px;
+    }
+}
