--- a/src/pages/contactpage/Contactpage.css
+++ b/src/pages/contactpage/Contactpage.css
@@ -1,5 +1,4 @@
 .contact {
-    min-height: 100vh;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -20,7 +19,7 @@
     width: 100%;
     max-width: 500px;
     border-radius: 20px;
-    background: whitesmoke;
+    background: rgba(255,255,255);
     box-shadow: inset 0px 0px 40px 40px rgb(188, 188, 188);
 }
 
