--- a/src/pages/portfolio/Portfolio.css
+++ b/src/pages/portfolio/Portfolio.css
@@ -1,4 +1,10 @@
-section {
+.section {
     display: flex;
     flex-direction: column;
   }
+@media(max-width:768px){
+.section{
+    height: auto;
+    width: auto;
+}
+}
