--- a/src/components/projectCard/ProjectCard.css
+++ b/src/components/projectCard/ProjectCard.css
@@ -2,11 +2,10 @@
     background: rgb(54, 54, 54);
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 12rem;
+    height: 14rem;
     flex-basis: 40%;
-    padding: 20px;
-    box-sizing: border-box;
+    padding:10px 20px;
+    gap: 10px;
     border-radius: 5px;
     box-shadow: inset 10px 0px 0px 0px rgb(1, 181, 169);
     position: relative;
@@ -22,7 +21,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(to right, rgb(47, 176, 176), rgb(1, 81, 77));
-    transition: left 1s ease,color 1s ease;
+    transition: left 1s ease, color 1s ease;
     z-index: 0;
 }
 
@@ -32,15 +31,69 @@
 }
 
 .project-card img {
-    width: 80%;
-    height: 8rem;
+    width: 70%;
+    height: 9rem;
     position: relative;
     z-index: 1;
 }
 
 .project-text {
     color: rgb(218, 218, 218);
-    text-align: center;
+    text-align: left;
+    max-width:50% ;
+    margin-top: 10px;
     position: relative;
     z-index: 1;
+}
+
+.project-stack {
+    display: none;
+    color: rgb(218, 218, 218);
+    align-items:left;
+    text-align: left;
+    position: relative;
+}
+
+.project-card:hover .project-stack {
+    display: block;
+    position: absolute;
+    right: 20px;
+    bottom: 10px;
+}
+
+@media (max-width: 768px) {
+    .project-card {
+      flex-basis: 100%;
+      flex-direction: column;
+      align-items: center;
+      padding:5px;
+    }
+    .project-card:hover .project-stack {
+        display: block;
+        position: absolute;
+        right: 20px;
+        bottom: 0px;
+    }
+
+    .project-card img {
+      width:90%;
+      height: 8rem;
+      border-radius: 0;
+      margin-bottom: 5px;
+
+    }
+    .project-text h3{
+        text-align: center;
+    }
+    .project-text {
+      font-size: 1rem;
+      text-align: left;
+      max-width: 80%;
+      margin-bottom: 25px;
+    }
+  }
+  @media(max-width:1024px){
+    .project-card{
+        min-height: 12rem;
+    }
 }
