--- a/src/pages/projectpage/Projectpage.css
+++ b/src/pages/projectpage/Projectpage.css
@@ -3,7 +3,6 @@
     margin-bottom: 60px;
     text-align: center;
     padding: 0px 10px;
-    min-height: 100vh;
 }
 .project h2{
     font-size: 2.3rem;
@@ -13,7 +12,23 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0px 200px;
+    margin: 0px 150px;
     gap:40px;
 
 }
+@media(max-width:1150px){
+    .project-container{
+        flex-direction: column;
+        margin:0px 200px;
+    }
+}
+@media (max-width: 768px) {
+.project-container{
+    margin: 0px 0px;
+}
+}
+@media (max-width: 480px) {
+
+    .project h2 {
+        font-size: 1.7rem;
+    }}
