--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -78,6 +78,65 @@
     color: rgb(231, 231, 231);
     transform: scale(1.04);
 }
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: white;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 10px;
+    padding: 15px;
+    position: relative;
+    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
+}
+
+.cv-viewer {
+    width: 100%;
+    height: 50vh;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 3rem;
+    color: black;
+    cursor: pointer;
+}
+
+.close-button:hover {
+    color: rgb(148, 229, 251);
+}
+
+.download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4e4e4f;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    text-align: center;
+    transition: background-color 0.3s ease;
+}
+
+.download-button:hover {
+    background-color: #0056b3;
+}
 @media (min-width: 769px) and (max-width: 1024px) {
     .home {
         margin: 0;
@@ -101,6 +160,14 @@
     .text button {
         font-size: 0.9rem;
         padding: 10px 25px;
+    }
+    .modal-content {
+        width: 95%;
+        max-width: 400px;
+    }
+
+    .cv-viewer {
+        height: 40vh;
     }
 }
 @media (max-width: 768px) {
@@ -140,7 +207,25 @@
         font-size: 0.8rem;
         padding: 10px 20px;
     }
+    .modal-content {
+        width: 95%;
+        max-width: 300px;
+        padding: 10px;
+    }
 
+    .cv-viewer {
+        height: 40vh;
+    }
+      .close-button {
+        font-size: 2rem;
+        top: 5px;
+        right: 10px;
+      }
+
+      .download-button {
+        font-size: 0.9rem;
+        padding: 8px 15px;
+      }
 }
 
 @media (max-width: 600px) {
@@ -176,4 +261,20 @@
         font-size: 0.7rem;
         padding: 8px 15px;
     }
-}
+    .modal-content {
+        padding: 8px;
+    }
+
+    .cv-viewer {
+        height: 35vh;
+    }
+
+      .download-button {
+        font-size: 0.8rem;
+        padding: 6px 10px;
+      }
+
+      .close-button {
+        font-size: 1.5rem;
+      }
+    }
