--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -19,7 +19,7 @@
     align-items: center;
     width: 100%;
     max-width: 400px;
-    border-radius:100px 100px 400px 100px;
+    border-radius: 100px 100px 400px 100px;
     overflow: hidden;
     background: linear-gradient(135deg, #0e0e0e, #292929);
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
@@ -51,7 +51,6 @@
     color: #f8f8f8;
 }
 
-
 .text p {
     font-size: 1rem;
     line-height: 1.8;
@@ -80,11 +79,11 @@
 }
 
 .modal {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     height: 100%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -173,15 +172,15 @@
 @media (max-width: 768px) {
     .home {
         margin: 0;
-        padding:20px;
+        padding: 20px;
         flex-direction: column;
         gap: 30px;
         height: auto;
     }
 
-    .image{
+    .image {
         margin-top: 40px;
-        height:auto;
+        height: auto;
         border-radius: 20px;
     }
     .image img {
@@ -216,16 +215,16 @@
     .cv-viewer {
         height: 40vh;
     }
-      .close-button {
+    .close-button {
         font-size: 2rem;
         top: 5px;
         right: 10px;
-      }
+    }
 
-      .download-button {
+    .download-button {
         font-size: 0.9rem;
         padding: 8px 15px;
-      }
+    }
 }
 
 @media (max-width: 600px) {
@@ -235,11 +234,11 @@
         gap: 15px;
         height: auto;
     }
-.image{
-    margin-top: 20px;
-    width: 12rem;
-    height: auto;
-}
+    .image {
+        margin-top: 20px;
+        width: 12rem;
+        height: auto;
+    }
     .image img {
         width: 80%;
     }
@@ -261,6 +260,9 @@
         font-size: 0.7rem;
         padding: 8px 15px;
     }
+    .modal{
+        margin: 0px 0px;
+    }
     .modal-content {
         padding: 8px;
     }
@@ -269,12 +271,12 @@
         height: 35vh;
     }
 
-      .download-button {
+    .download-button {
         font-size: 0.8rem;
         padding: 6px 10px;
-      }
-
-      .close-button {
-        font-size: 1.5rem;
-      }
     }
+
+    .close-button {
+        font-size: 1.5rem;
+    }
+}
