--- a/src/components/projectCard/ProjectCard.css
+++ b/src/components/projectCard/ProjectCard.css
@@ -2,9 +2,10 @@
     background: rgb(54, 54, 54);
     display: flex;
     justify-content: center;
-    height: 14rem;
+    flex-direction: column;
     flex-basis: 40%;
-    padding:10px 20px;
+    padding:10px 15px;
+    height: 32vh;
     gap: 10px;
     border-radius: 5px;
     box-shadow: inset 10px 0px 0px 0px rgb(1, 181, 169);
@@ -12,7 +13,9 @@
     overflow: hidden;
     transition: background 1s ease;
 }
-
+.project-card h3{
+    z-index: 1;
+}
 .project-card::before {
     content: "";
     position: absolute;
@@ -30,17 +33,18 @@
     color: white;
 }
 
-.project-card img {
-    width: 70%;
-    height: 9rem;
+.project-text img {
+    width: 50%;
+    height: 20vh;
     position: relative;
     z-index: 1;
 }
 
 .project-text {
+    display: flex;
     color: rgb(218, 218, 218);
     text-align: left;
-    max-width:50% ;
+    gap:20px;
     margin-top: 10px;
     position: relative;
     z-index: 1;
@@ -57,8 +61,8 @@
 .project-card:hover .project-stack {
     display: block;
     position: absolute;
-    right: 20px;
-    bottom: 10px;
+    left: 10px;
+    bottom: 5px;
 }
 
 @media (max-width: 767px) {
@@ -76,24 +80,28 @@
     }
 
     .project-card img {
-      width:90%;
+      width:auto;
       height: 8rem;
       border-radius: 0;
-      margin-bottom: 5px;
 
     }
-    .project-text h3{
-        text-align: center;
-    }
+
     .project-text {
-      font-size: 1rem;
+     flex-direction: column;
+      font-size: 0.9rem;
       text-align: left;
-      max-width: 80%;
+      max-width: 90%;
       margin-bottom: 25px;
     }
+    .project-stack{
+        font-size: 0.8rem;
+    }
   }
-  @media(max-width:1024px){
+  @media(max-width:1150px){
     .project-card{
-        min-height: 12rem;
+        padding:30px 15px;
+    };
+    .project-stack{
+        padding: 20px;
     }
 }
