--- a/src/components/projectCard/ProjectCard.css
+++ b/src/components/projectCard/ProjectCard.css
@@ -45,6 +45,7 @@
     color: rgb(218, 218, 218);
     text-align: left;
     gap:20px;
+    padding-bottom:30px ;
     margin-top: 10px;
     position: relative;
     z-index: 1;
@@ -62,7 +63,8 @@
     display: block;
     position: absolute;
     left: 10px;
-    bottom: 5px;
+    bottom: 10px;
+
 }
 
 @media (max-width: 767px) {
@@ -76,7 +78,7 @@
         display: block;
         position: absolute;
         right: 20px;
-        bottom: 0px;
+        bottom: 10px;
     }
 
     .project-card img {
@@ -103,5 +105,6 @@
     };
     .project-stack{
         padding: 20px;
+
     }
 }
