--- a/src/pages/skillspage/Skillspage.css
+++ b/src/pages/skillspage/Skillspage.css
@@ -34,11 +34,13 @@
     flex-shrink: 0;
     text-align: center;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 .skill-card img {
     width: 3rem;
     height: 3rem;
+
 }
 
 .skill-card-title {
@@ -64,7 +66,7 @@
     .skill-cards{
         margin: 0px 0px;
         gap:15px;
-        
+
     }
 
     .skill-card {
