--- a/src/components/projectCard/ProjectCard.css
+++ b/src/components/projectCard/ProjectCard.css
@@ -100,6 +100,8 @@
     display: none;
     color: rgb(218, 218, 218);
     position: relative;
+    bottom: 40px;
+    font-size: 1.09rem;
     text-align: center;
 }
 
@@ -135,7 +137,7 @@
     }
 
     .project-stack {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
 
     .arrow {
