--- a/src/pages/homepage/Homepage.css
+++ b/src/pages/homepage/Homepage.css
@@ -92,7 +92,7 @@
 }
 
 .modal-content {
-    background-color: white;
+    background-color: rgb(14, 13, 13);
     width: 90%;
     max-width: 600px;
     border-radius: 10px;
@@ -110,15 +110,15 @@
 
 .close-button {
     position: absolute;
-    top: 10px;
-    right: 20px;
+    top: -10px;
+    right: 5px;
     font-size: 3rem;
-    color: black;
+    color: rgb(233, 230, 230);
     cursor: pointer;
 }
 
 .close-button:hover {
-    color: rgb(148, 229, 251);
+    color: rgb(245, 43, 43);
 }
 
 .download-button {
@@ -217,7 +217,7 @@
     }
     .close-button {
         font-size: 2rem;
-        top: 5px;
+        top: px;
         right: 10px;
     }
 
